--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 <h2>index page</h2>
-<a>Profile จอม</a>
+<a>Profile จอม</a><br>
+<a href="pao.html">Profile เปา</a>
 </body>
 
 </html>
