--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
+
+	<title>
+		IndexPage
+	</title>
+
 <body>
 <h2>index page</h2>
 <a>Profile จอม</a><br>
-<a href="pao.html">Profile เปา</a>
+<a href="pao.html">Profile เปา</a><br>
+<a href="9Art.html">Profile 9Art</a><br>
 </body>
 
 </html>
