--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <h2>index page</h2>
 <a>Profile จอม</a><br>
 <a href="pao.html">Profile เปา</a>
+
+<a>Profile แก้ว</a><br>
+<a href="koekaew.html">Profile แก้ว</a>
 </body>
 
 </html>
