--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h2>index page</h2>
 <a href="jormProfile.html">Profile จอม</a>
 <a href="pao.html">Profile เปา</a>
-
+<a href="SorrY.html">SorrY</a>
 <a>Hello</a>
 </body>
 
