--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <a href="jormProfile.html">Profile จอม</a>
 <a href="pao.html">Profile เปา</a>
 <a href="SorrY.html">SorrY</a>
+<a href="pom.html">Profile ปอม</a>
 <a>Hello</a>
 </body>
 
