Add Noina profile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h2>index page</h2>
 <a href="jormProfile.html">Profile จอม</a>
 <a href="pao.html">Profile เปา</a>
+<a href="noina.html">Profile น้อยหน่า</a> 
 </body>
 
 </html>
