--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <h2>index page</h2>
 <a href="jormProfile.html">Profile จอม</a>
 <a href="pao.html">Profile เปา</a>
-
-<a>Hello</a>
+<a href="knpage.html">Profile นิว</a>
 </body>
 
 </html>
