--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
 	</title>
 
 <body>
-<a href="jormProfile.html">Profile จอม</a>
+<a href="jormProfile.html">Profile จอม</a><br>
 <a href="pao.html">Profile เปา</a><br>
 <a href="9Art.html">Profile 9Art</a><br>
-
-<a href="SorrY.html">SorrY</a>
-<a href="pom.html">Profile ปอม</a>
-<a href="Pee.html">Profile พีพี</a>
-<a href="knpage.html">Profile นิว</a>
-<a>Hello</a>
-<a href="noina.html">Profile น้อยหน่า</a> 
+<a href="SorrY.html">SorrY</a><br>
+<a href="pom.html">Profile ปอม</a><br>
+<a href="Pee.html">Profile พีพี</a><br>
+<a href="knpage.html">Profile นิว</a><br>
+<a href="noina.html">Profile น้อยหน่า</a> <br>
 </body>
 
 </html>
