--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
 	</title>
 
 <body>
-<<<<<<< HEAD
 <h2>index page</h2>
-<a>Profile จอม</a>
-<a href="Profile_arm.html">Profile อาม</a>
-</body></html>
-=======
-<a href="jormProfile.html">Profile จอม</a>
+<a href="Profile_arm.html">Profile อาม</a><br>
+<a href="jormProfile.html">Profile จอม</a><br>
 <a href="pao.html">Profile เปา</a><br>
 <a href="9Art.html">Profile 9Art</a><br>
 <a href="SorrY.html">SorrY</a><br>
@@ -22,4 +18,4 @@
 </body>
 
 </html>
->>>>>>> f929965457289b777826ca33dc277e4f8b74aaae
+
